fix: correct an horizontal scrolling problem with small resolution and responsive design

--- a/assets/scss/templates/_portfolio.scss
+++ b/assets/scss/templates/_portfolio.scss
@@ -65,6 +65,7 @@
     position: absolute;
     right: -220px;
     top: 0px;
+    clip: rect(0px,115px,329px,0px);
     @media only screen and (max-width: 991px) {
     	opacity: 0.5;
     }
